======================
Changes for Crate Data
======================


Unreleased
==========

2014/10/24 0.44.8
=================

 - Fix: all group by queries with the primary key(s) or routing column
   as group key(s) are executed correctly

2014/10/21 0.44.7
=================

 - Fix: non-matching global aggregates on partitioned tables failed

 - Fix: handle boost factor in simple match predicate correctly

 - Reduced memory consumption of COPY FROM statements that involve partitioned
   tables.

 - Reduced memory consumption during execution of regular SELECT statements

 - Fix: Requests that resulted in a shard failure could cause a NPE during the
   generation of the error message.

2014/10/14 0.44.6
=================

 - fix: pre-calculated count is now also used on partitioned tables

2014/10/10 0.44.5
=================

 - fix: trying to copy out of a non-existent partition now throws an
   appropriate exception

 - fix: some shard errors were not being raised and so the shard failed silently
   when some kind of errors, like an Out of memory error occured.

 - upgraded ES upstream to v1.3.4

2014/10/04 0.44.4
=================

 - Fix: The ``>`` and ``<`` operators didn't behave correctly in some cases for
   string values if used on a system table or if both operands were literals.

 - fix: updating a partitioned table with a WHERE clause querying for a
   non existent column of for a non existent partition value led to
   updating all partitions of the queried table

2014/10/02 0.44.3
=================

 - fix: deleting on a partitioned table with a WHERE clause querying for a
   non existent column or for a non existent partition value led to
   deletion of all partitions of the queried table

 - Fix: Copy from using the PARTITION clause imported into a ``null`` partition
   instead of using the partition clause.

2014/09/26 0.44.2
=================

 - Track correct transient cluster setting for routing allocation