@@ -21,7 +21,10 @@
 
 package io.crate.integrationtests;
 
-import io.crate.action.sql.*;
+import io.crate.action.sql.SQLAction;
+import io.crate.action.sql.SQLActionException;
+import io.crate.action.sql.SQLRequest;
+import io.crate.action.sql.SQLResponse;
 import io.crate.test.integration.CrateIntegrationTest;
 import org.elasticsearch.client.Client;
 import org.junit.Rule;
@@ -278,6 +281,17 @@ public class SQLTypeMappingTest extends SQLTransportIntegrationTest {
         for (int i=0; i < getResponse.rows()[0].length; i++) {
             assertThat(getResponse.rows()[0][i], is(searchResponse.rows()[0][i]));
         }
+    }
+
+    @Test
+    public void testInsertObjectIntoString() throws Exception {
+        execute("create table t1 (o object)");
+        ensureGreen();
+        execute("insert into t1 values ({a='abc'})");
+        refresh();
+        expectedException.expect(SQLActionException.class);
+        expectedException.expectMessage("Validation failed for o.a: Invalid string");
+        execute("insert into t1 values ({a=['123', '456']})");
     }
 
     @Test
