@@ -6,6 +6,9 @@ Changes for Crate Data
 Unreleased
 ==========
 
+ - Fix: raise an error if an array is inserted into an objects
+   field which is not of type array
+
 2014/10/24 0.44.8
 =================
 
